[gd_scene format=3 uid="uid://c3pq8rft6m21"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_body"]
radius = 0.4
height = 1.8

[sub_resource type="StandardMaterial3D" id="Mat_body"]
albedo_color = Color(0.3, 0.4, 0.7, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_sword"]
size = Vector3(1.2, 0.5, 1.2)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("CameraPivot:rotation")
properties/2/spawn = false
properties/2/sync = true
properties/2/watch = false

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_body")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_body")
surface_material_override/0 = SubResource("Mat_body")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
fov = 90.0

[node name="SwordArea" type="Area3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraPivot/SwordArea"]
shape = SubResource("BoxShape3D_sword")

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
pixel_size = 0.006
billboard = 3
text = "Player"
font_size = 48
outline_size = 8

[node name="Sync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1")
replication_interval = 0.0
delta_interval = 0.05
